favicon エラー削除

--- a/templates/client.html
+++ b/templates/client.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>test HTML</title>
+  <link rel="icon" href="data:;base64,iVBORwOKGO=" />
 </head>
 <body>
   <p>client html</p>
