--- a/templates/user.html
+++ b/templates/user.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <p>client html</p>
-  <script type="text/javascript" src="./static/client.js"></script>
+  <script type="text/javascript" src="./static/user.js"></script>
 </body>
 </html>
 
