--- a/templates/user.html
+++ b/templates/user.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>test HTML</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
+  <!-- <link rel="stylesheet" href="/static/user-waiting.css"> -->
+  <script type="text/javascript" src="./static/user.js"></script>
 </head>
 <body>
-  <p>client html</p>
-  <script type="text/javascript" src="./static/user.js"></script>
+  <p>処理中...</p>
 </body>
 </html>
 
