穴掘り中追加

--- a/templates/user.html
+++ b/templates/user.html
@@ -4,11 +4,18 @@
   <meta charset="utf-8">
   <title>test HTML</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-  <!-- <link rel="stylesheet" href="/static/user-waiting.css"> -->
-  <script type="text/javascript" src="./static/user.js"></script>
+  <link rel="stylesheet" href="/static/user.css?update=2019071316">
 </head>
 <body>
-  <p>処理中...</p>
+  <div id="loading">
+    <img src="static/img/drill-250-250-30.gif" alt="loading">
+  </div>
+  
+  <div id="contents" alt="hidden"> 
+    <p>モグちゃんは宝を見つけました!</p>
+  </div>
+  
+  <script type="text/javascript" src="./static/user.js?update=201907141674"></script>
 </body>
 </html>
 
