穴掘り中の実装(頭良くない、原因不明)

--- a/templates/user.html
+++ b/templates/user.html
@@ -4,18 +4,18 @@
   <meta charset="utf-8">
   <title>test HTML</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-  <link rel="stylesheet" href="/static/user.css?update=2019071317">
+  <link rel="stylesheet" href="/static/user.css?update=2019071319">
 </head>
 <body>
   <div id="loading">
-    <img src="static/img/drill-250-250-30.gif" alt="loading">
+    <!-- <img src="static/img/drill-250-250-30.gif" alt="loading"> -->
   </div>
   
   <div id="contents" alt="hidden"> 
     <p>モグちゃんは宝を見つけました!</p>
   </div>
   
-  <script type="text/javascript" src="./static/user.js?update=201907141690"></script>
+  <script type="text/javascript" src="./static/user.js?update=2019071416105"></script>
 </body>
 </html>
 
