--- a/templates/user.html
+++ b/templates/user.html
@@ -8,14 +8,15 @@
 </head>
 <body>
   <div id="loading">
-    <!-- <img src="static/img/drill-250-250-30.gif" alt="loading"> -->
+    <img src="static/img/drill-250-250-30.gif" alt="loading">
+    <!-- <img src="static/img/ground-after-250-250.png" alt="loading"> -->
   </div>
   
   <div id="contents" alt="hidden"> 
-    <p>モグちゃんは宝を見つけました!</p>
+    <!-- <p>モグちゃんは宝を見つけました!</p> -->
   </div>
   
-  <script type="text/javascript" src="./static/user.js?update=2019071416105"></script>
+  <script type="text/javascript" src="./static/user.js?update=137"></script>
 </body>
 </html>
 
