--- a/design/html-test/css/styles.css
+++ b/design/html-test/css/styles.css
@@ -1,22 +1,15 @@
 @charset "UTF-8";
 
 .mogumogu{
-  font-size: 50px;
-  font-weight: 900;
   cursor: pointer;
 }
 
-.line1{
-  height: 250px;
-  display: flex;
-  flex-direction: row;
+#timer{
+  font-size: 50px;
+  font-weight: 900;
 }
-.line2{
-  height: 250px;
-  display: flex;
-  flex-direction: row;
-}
-.line3{
+
+.line{
   height: 250px;
   display: flex;
   flex-direction: row;
