--- a/static/user.css
+++ b/static/user.css
@@ -1,18 +1,11 @@
 #loading {
-	display: table;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: #fff;
-	opacity: 0.8;
-  }
-   
-  #loading .loadingMsg {
-	display: table-cell;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	text-align: center;
-	vertical-align: middle;
-	padding-top: 140px;
-	background: url('static/img/drill-250-250-30.gif') center center no-repeat;
   }
+
+.hidden{
+	display: none;
+}
