穴掘り中コメント追加

--- a/templates/user.html
+++ b/templates/user.html
@@ -4,20 +4,24 @@
   <meta charset="utf-8">
   <title>test HTML</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-  <link rel="stylesheet" href="../static/user.css?update145">
+  <link rel="stylesheet" href="../static/user.css?update146">
 </head>
 <body>
   <div id="loading">
     <img src="../static/img/drill-250-250-30.gif" alt="loading" id="img">
     <!-- <img src="static/img/ground-after-250-250.png" alt="loading"> -->
     <p>穴掘り中...</p>
+    <p>
+      以下の数字を素数解析しています...
+    </p>
+    
   </div>
   
   <div id="contents" class="hidden">
     <p>モグちゃんは宝を見つけました!</p>
   </div>
   
-  <script type="text/javascript" src="../static/user.js?update=145"></script>
+  <script type="text/javascript" src="../static/user.js?update=146"></script>
 </body>
 </html>
 
