staticに追加＆ルーティングを修正

--- a/templates/user.html
+++ b/templates/user.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div id="loading">
-    <img src="../static/img/drill-250-250-30.gif" alt="loading" id="img">
-    <!-- <img src="static/img/ground-after-250-250.png" alt="loading"> -->
+    <img src="../img/drill-250-250-30.gif" alt="loading" id="img">
+    <!-- <img src="img/ground-after-250-250.png" alt="loading"> -->
     <p>穴掘り中...</p>
     <p>
       以下の数字を素数解析しています...
