--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -8,9 +8,9 @@
 <body>
   <p>ユーザ 待機中</p>
   <a href="/user" class="btn">穴掘りに参加!</a>
-  <img src="static/img/drill-250-250-30.gif" height="250" alt="">
-  <img src="static/img/ground-after-250-250.png" alt="">
-  <img src="static/img/ground-before-250-250.png" alt="">
+  <img src="img/drill-250-250-30.gif" height="250" alt="">
+  <img src="img/ground-after-250-250.png" alt="">
+  <img src="img/ground-before-250-250.png" alt="">
   <p>次郎とは...by 山崎</p>
 </body>
 </html>
