終了時動作

--- a/templates/user.html
+++ b/templates/user.html
@@ -4,23 +4,18 @@
   <meta charset="utf-8">
   <title>test HTML</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-  <link rel="stylesheet" href="../static/user.css?update=151">
+  <link rel="stylesheet" href="../static/user.css?update=152">
 </head>
 <body>
   <div id="loading">
-    <img src="../static/img/moguchan-udekumi.png" width= 500 alt="loading" id="img">
-    <p>穴掘り中...</p>
-    <p>
-      以下の数字を素数解析しています...
-    </p>
-    <div id="num"></p>
+    <img src="../static/img/moguchan-udekumi.png" width=500 alt="loading" id="img">
+      <p id="contents">穴掘り中...<br><br>以下の数字を素数解析しています</p>
+    <div id="num">0</p>
   </div>
   
-  <div id="contents" class="hidden">
-    <p>モグちゃんは宝を見つけました!</p>
-  </div>
+
   
-  <script type="text/javascript" src="../static/user.js?update=151"></script>
+  <script type="text/javascript" src="../static/user.js?update=152"></script>
 </body>
 </html>
 
