--- a/templates/user.html
+++ b/templates/user.html
@@ -10,7 +10,7 @@
   <div id="loading">
     <img src="../static/img/moguchan-udekumi.png" width=500 alt="loading" id="img">
       <p id="contents">穴掘り中...<br><br>以下の数字を素数解析しています</p>
-    <div id="num">0</p>
+    <div id="num">0</div>
   </div>
   
 
