--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>test HTML</title>
+  <title>穴掘れ!モグちゃん!!</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
 </head>
 <body>
@@ -14,5 +14,3 @@
   <p>次郎とは...by 山崎</p>
 </body>
 </html>
-
-
