--- a/templates/user.html
+++ b/templates/user.html
@@ -2,20 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>test HTML</title>
+  <title>穴掘りの時間だ!!</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
   <link rel="stylesheet" href="../static/user.css?update=152">
 </head>
 <body>
   <div id="loading">
-    <img src="../static/img/moguchan-udekumi.png" width=500 alt="loading" id="img">
-      <p id="contents">穴掘り中...<br><br>以下の数字を素数解析しています</p>
-    <div id="num">0</div>
+    <img src="../static/img/moguchan-udekumi.png" width=700 alt="loading" id="img">
+    <div class="contents" style="position:absolute; top:76%; left:0%; width:700px;">穴掘り中モグ...</div>
+    <div id="num" style="position:absolute; top:82%; left:0%; width:700px;">0</div>
+    <div class="contents" style="position:absolute; top:91%; left:0%; width:700px;">を素数解析!</div>
   </div>
-  
 
-  
+
+
   <script type="text/javascript" src="../static/user.js?update=152"></script>
 </body>
 </html>
-
