穴掘るボタンを設置

--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>穴掘れ!モグちゃん!!</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
+  <link rel="stylesheet" href="../static/user-waiting.css?update=152">
 </head>
 <body>
-  <p>ユーザ 待機中</p>
-  <a href="/user" class="btn">穴掘りに参加!</a>
-  <img src="img/drill-250-250-30.gif" height="250" alt="">
-  <img src="img/ground-after-250-250.png" alt="">
-  <img src="img/ground-before-250-250.png" alt="">
-  <p>次郎とは...by 山崎</p>
+  <div id="user-menu">
+    <p>ユーザ 待機中</p>
+    <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=700 alt="dig-start" id="img"></a>
+    <p>次郎とは...by 山崎</p>
+  </div>
 </body>
 </html>
