--- a/templates/user.html
+++ b/templates/user.html
@@ -9,9 +9,8 @@
 <body>
   <div id="loading">
     <img src="../static/img/moguchan-udekumi.png" width=700 alt="loading" id="img">
-    <div class="contents" style="position:absolute; top:76%; left:0%; width:700px;">穴掘り中モグ...</div>
+    <div id="contents" style="position:absolute; top:78%; left:0%; width:700px;">穴掘り中モグ...<br><br><br>を素数解析!</div>
     <div id="num" style="position:absolute; top:82%; left:0%; width:700px;">0</div>
-    <div class="contents" style="position:absolute; top:91%; left:0%; width:700px;">を素数解析!</div>
   </div>
 
 
