ロゴを追加

--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div id="user-menu">
-    <p>ユーザ 待機中</p>
+    <img src="../static/img/logo.png" width=300 alt="logo">
     <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=700 alt="dig-start" id="img"></a>
-    <p>次郎とは...by 山崎</p>
+    <h2>BBDCについて</h2>
   </div>
 </body>
 </html>
