--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -7,10 +7,22 @@
   <link rel="stylesheet" href="../static/user-waiting.css?update=152">
 </head>
 <body>
-  <div id="user-menu">
-    <img src="../static/img/logo.png" width=500 alt="logo">
-    <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=800 alt="dig-start" id="img"></a>
-    <h2>BBDCについて</h2>
+  <div id="menu">
+    <div class="sp"></div>
+
+    <div class="image">
+      <img src="../static/img/logo.png" width=500 alt="logo">
+      <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=800 alt="dig-start" id="img"></a>
+    </div>
+
+    <div class="sp"></div>
+
+    <div id="setumei">
+      <div class="text">
+        <a  href="https://cdlab-sit.github.io/BBDC/templates/description.html" target="_blank"><h1 class="centerh">展示物の説明</h1></a>
+      </div>
+    </div>
   </div>
+
 </body>
 </html>
