--- a/templates/user.html
+++ b/templates/user.html
@@ -9,8 +9,10 @@
 <body>
   <div id="loading">
     <img src="../static/img/moguchan-udekumi.png" width=700 alt="loading" id="img">
-    <div id="contents" style="position:absolute; top:78%; left:0%; width:700px;">穴掘り中モグ...<br><br><br>を素数解析!</div>
-    <div id="num" style="position:absolute; top:82%; left:0%; width:700px;">0</div>
+    <p id="text" class="contents" >穴掘り中モグ...</p>
+    <p id="num" class="contents" >0</p>
+    <p class="contents" >を素数解析!</p>
+    <p id="result" class="contents"></p>
   </div>
 
 
