デザインの骨格は完成

--- a/templates/description.html
+++ b/templates/description.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>穴掘れ!モグちゃん!!</title>
+  <title>モグちゃんの説明ページ</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
   <link rel="stylesheet" href="../static/user-waiting.css?update=152">
 </head>
@@ -11,8 +11,11 @@
     <div class="sp"></div>
 
     <div class="image">
-      <img src="../static/img/logo.png" width=500 alt="logo">
-      <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=800 alt="dig-start" id="img"></a>
+      <img src="../static/img/logo.png" width=500 alt="logo"><br>
+      <img src="../static/img/dig-start.png" width=800 alt="dig-start" id="img"><br>
+      <div class="text">
+        <p id="chuu">※説明用ページなのでモグちゃんを応援することはできません</p>
+      </div>
     </div>
 
     <div class="sp"></div>
@@ -21,6 +24,7 @@
       <div class="text">
         <h1 class="centerh">展示物の説明</h1>
       </div>
+
       <div class="text">
         <h1 class="H">モグちゃん</h1>
       </div>
@@ -72,7 +76,27 @@
       </div>
 
       <div class="text">
-        <h1 class="centerh">リンク</h1>
+        <h1 class="centerh">研究室</h1>
+      </div>
+      <div class="image">
+        <img src="../static/img/" alt="山崎さんの写真">
+      </div>
+      <div class="text">
+        <h1 class="H">研究室名</h1>
+        <p>コンピューティングデザイン研究室(cdlab)</p>
+        <h1 class="H">担当教員</h1>
+        <p>山崎憲一</p>
+        <h1 class="H">所属学科</h1>
+        <p>デザイン工学部デザイン工学科</p>
+        <h1 class="H">所在キャンパス</h1>
+        <p>田町キャンパス</p>
+        <h1 class="H">リンク</h1>
+        <a  href="https://www.shibaura-it.ac.jp/laboratories/kenichi_yamazaki.html" target="_blank">芝浦工業大学ホームページ</a><br>
+        <a  href="https://admissions.shibaura-it.ac.jp/laboratories/guide/detail/0250.html" target="_blank">入試情報サイト</a><br>
+        <a  href="http://www.sic.shibaura-it.ac.jp/~yamaken/index.html" target="_blank">cdlabホームページ</a><br>
+        <h1 class="centerh">GitHub</h1>
+        <p>「穴掘れ!モグちゃん!!」はGitHubにてソースコードを公開しています。</p><br>
+        <a href="https://github.com/cdlab-sit/BBDC"  target="_blank">GitHub"穴掘れ!モグちゃん!!"</a>
       </div>
     </div>
   </div>
