--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="../static/user-waiting.css?update=152">
 </head>
 <body>
-  <div id="menu">
+  <div class="menu">
     <div class="sp"></div>
 
     <div class="image">
-      <img src="../static/img/logo.png" width=500 alt="logo">
+      <img src="../static/img/logo.png" width=500 alt="logo"><br>
       <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=800 alt="dig-start" id="img"></a>
     </div>
 
