--- a/templates/description.html
+++ b/templates/description.html
@@ -98,6 +98,10 @@
         <p>「穴掘れ!モグちゃん!!」はGitHubにてソースコードを公開しています。</p><br>
         <a href="https://github.com/cdlab-sit/BBDC"  target="_blank">GitHub"穴掘れ!モグちゃん!!"</a>
       </div>
+      <div class="sp"></div>
+      <div class="text">
+        <p id="chuu">Presented by cdlab</p>
+      </div>
     </div>
   </div>
 
