--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,7 +8,7 @@
   <body>
     <div style="position: relative;" id="menu" class="mogumogu">
       <img id="menuimg" src="static/img/menu.png" alt="menuImage">
-      <div class="timer" id="menutimer" style="position:absolute; top:470px; left:30px; width:430px;">00:00:000</div>
+      <div class="timer" id="menutimer" style="position:absolute; top:470px; left:7%; width:430px;">00:00:000</div>
     </div>
 
     <script type="text/javascript" src="static/menuSource.js"></script>
