--- a/templates/moguchan.html
+++ b/templates/moguchan.html
@@ -26,8 +26,8 @@
         <img id="l3c4" src="static/img/treasure-250-250-30.gif" alt="l3c4">
       </div>
 
-      <div id="clear" style="position:absolute; top:130px; width:430px;"></div>
-      <div class="timer" id="digtimer" style="position:absolute; top:370px; left:250px; width:430px;"></div>
+      <div id="clear" style="position:absolute; top:130px; left:10%; width:430px;"></div>
+      <div class="timer" id="digtimer" style="position:absolute; top:370px; left:31%; width:430px;"></div>
     </div>
 
     <script type="text/javascript" src="static/source.js"></script>
