--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@
 
 .mogumogu{
   cursor: pointer;
+  text-align: center;
 }
 
 #menutimer{
@@ -19,5 +20,6 @@
 .line{
   height: 250px;
   display: flex;
+  justify-content: center;
   flex-direction: row;
 }
