cdlabのロゴ追加

--- a/templates/description.html
+++ b/templates/description.html
@@ -79,7 +79,7 @@
         <h1 class="centerh">研究室</h1>
       </div>
       <div class="image">
-        <img src="../static/img/" alt="山崎さんの写真">
+        <img src="../static/img/cdlab-logo.png" width=700 alt="山崎さんの写真">
       </div>
       <div class="text">
         <h1 class="H">研究室名</h1>
