説 明 完 成(のつもり)

--- a/templates/description.html
+++ b/templates/description.html
@@ -34,7 +34,7 @@
         <img src="../static/img/drill-250-250-30.gif" alt="drill">
       </div>
       <div class="text">
-        <p>モグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグモグ</p>
+        <p>モグちゃんはお宝を見つけるために穴を掘っています。<br><br>モグちゃんはピッケルやドリルマシーンなども使いながら穴を掘りますが、モグちゃん一人ではお宝にたどり着けません。<br><br>モグちゃんを応援して穴掘りを手伝ってあげましょう!<br><br></p>
       </div>
 
       <div class="text">
@@ -44,39 +44,39 @@
         <img src="../static/img/treasure-250-250-30.gif" alt="sutegoro">
       </div>
       <div class="text">
-        <p>おたからおたからおたからおたからおたからおたからおたからおたからおたからおたからおたからおたからおたからおたからおたからおたから</p>
+        <p>モグちゃんの目当てであるお宝です。<br><br>応援する人が多いほどモグちゃんの掘るスピードも上がります。<br><br>みんなでモグちゃんを応援しましょう!<br><br></p>
       </div>
 
       <div class="text">
         <h1 class="centerh">中身の説明</h1>
       </div>
       <div class="text">
-        <h1 class="H">穴掘りのルール</h1>
+        <h1 class="H">穴掘りの仕組み</h1>
       </div>
       <div class="image">
         <img src="../static/img/gennri1.png" width=1000 alt="原理">
       </div>
       <div class="text">
-        <p>問題が出されて解いてるんだよおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおお</p>
+        <p>まず、穴掘り画面が写っているパソコンがランダムな数字を1000個用意します。<br><br>この数字を1つずつ応援者のスマホに送ります。<br><br>応援者のスマホで送られてきた数字を素因数分解し、解答を返します。<br><br>これを数字1000個分繰り返します。<br><br>モグちゃんは区切り区切りで穴を掘っていき、1000個解き終わった時に宝石にたどり着きます。<br><br></p>
       </div>
 
       <div class="text">
-        <h1 class="H">速くする方法</h1>
+        <h1 class="H">速くなる仕組み</h1>
       </div>
       <div class="image">
         <img src="../static/img/gennri2.png" width=1000 alt="みんなで協力">
       </div>
       <div class="text">
-        <p>だからみんなでアクセスしよよおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおお</p>
+        <p>応援者が増えるということは、出題される問題を解く人数が増えるということです。<br><br>出題される問題の数は決まっているので、解く人数が増えれば処理の時間は短くなり、モグちゃんの穴掘りが速くなります。<br><br></p>
       </div>
 
       <div class="text">
         <h1 class="H">分散処理</h1>
-        <p>こういう感じに処理を速くする技術を分散処理といって、色んなことに使われてるおおおおおおおおおおおおおおおおおおおおおおおおお</p>
+        <p>このように複数のコンピュータで処理を分担する方式を分散処理(あるいは分散コンピューティング)と呼びます。<br><br>近年データが大規模化している中で、一つのコンピュータで大規模のデータを処理すると、そのコンピュータへの負担が大きくなりパフォーマンスが落ちるなどの問題となります。<br><br>このような問題を解決する技術として分散処理は注目を集めています。</p>
       </div>
 
       <div class="text">
-        <h1 class="centerh">研究室</h1>
+        <h1 class="centerh">発表研究室</h1>
       </div>
       <div class="image">
         <img src="../static/img/cdlab-logo.png" width=700 alt="山崎さんの写真">
@@ -93,7 +93,7 @@
         <h1 class="H">リンク</h1>
         <a  href="https://www.shibaura-it.ac.jp/laboratories/kenichi_yamazaki.html" target="_blank">芝浦工業大学ホームページ</a><br>
         <a  href="https://admissions.shibaura-it.ac.jp/laboratories/guide/detail/0250.html" target="_blank">入試情報サイト</a><br>
-        <a  href="http://www.sic.shibaura-it.ac.jp/~yamaken/index.html" target="_blank">cdlabホームページ</a><br>
+        <a  href="http://www.sic.shibaura-it.ac.jp/~yamaken/index.html" target="_blank">cdlabホームページ</a><br><br>
         <h1 class="centerh">GitHub</h1>
         <p>「穴掘れ!モグちゃん!!」はGitHubにてソースコードを公開しています。</p><br>
         <a href="https://github.com/cdlab-sit/BBDC"  target="_blank">GitHub"穴掘れ!モグちゃん!!"</a>
