細かい修正

--- a/templates/description.html
+++ b/templates/description.html
@@ -44,7 +44,7 @@
         <img src="../static/img/treasure-250-250-30.gif" alt="sutegoro">
       </div>
       <div class="text">
-        <p>モグちゃんの目当てであるお宝です。<br><br>応援する人が多いほどモグちゃんの掘るスピードも上がります。<br><br>みんなでモグちゃんを応援しましょう!<br><br></p>
+        <p>モグちゃんの目当てであるお宝です。キレイですね。ダイヤモンドでしょうか。<br><br>応援する人が多いほどモグちゃんの掘るスピードも上がります。<br><br>たくさんの人で応援するとモグちゃんのスピードはすごいことになります!<br><br></p>
       </div>
 
       <div class="text">
@@ -72,7 +72,7 @@
 
       <div class="text">
         <h1 class="H">分散処理</h1>
-        <p>このように複数のコンピュータで処理を分担する方式を分散処理(あるいは分散コンピューティング)と呼びます。<br><br>近年データが大規模化している中で、一つのコンピュータで大規模のデータを処理すると、そのコンピュータへの負担が大きくなりパフォーマンスが落ちるなどの問題となります。<br><br>このような問題を解決する技術として分散処理は注目を集めています。</p>
+        <p>このように複数のコンピュータで処理を分担する方式を分散処理(あるいは分散コンピューティング)と呼びます。<br><br>データが大規模化している近年、一つのコンピュータで大規模のデータを処理すると、そのコンピュータの負担が大きくなりパフォーマンスが落ちるなどの問題が生じます。<br><br>このような問題を解決する技術として分散処理は注目を集めています。</p>
       </div>
 
       <div class="text">
