--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -23,6 +23,9 @@
         <a  href="https://cdlab-sit.github.io/BBDC/templates/description.html" target="_blank"><h1 class="centerh">展示物の説明</h1></a>
       </div>
     </div>
+
+    <div class="sp"></div>
+
   </div>
 
 </body>
