プルススペース

--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -17,6 +17,7 @@
 
     <div class="sp"></div>
     <div class="sp"></div>
+    <div class="sp"></div>
 
     <div id="setumei">
       <div class="text">
