説明画像を追加

--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -12,20 +12,16 @@
 
     <div class="image">
       <img src="../static/img/logo.png" width=500 alt="logo"><br>
-      <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=800 alt="dig-start" id="img"></a>
+      <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=800 alt="dig-start" id="digimg"></a>
     </div>
 
-    <div class="sp"></div>
-    <div class="sp"></div>
     <div class="sp"></div>
 
     <div id="setumei">
-      <div class="text">
-        <a  href="https://cdlab-sit.github.io/BBDC/templates/description.html" target="_blank"><h1 class="centerh">展示物の説明</h1></a>
+      <div class="image">
+        <a  href="https://cdlab-sit.github.io/BBDC/templates/description.html" target="_blank"><img src="../static/img/descri-btn.png" width=600 alt="description-img" id="desimg"></a>
       </div>
     </div>
-
-    <div class="sp"></div>
 
   </div>
 
