--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="static/styles.css">
   </head>
   <body>
-    <div style="position: relative;" id="menu" class="mogumogu">
-      <img id="menuimg" src="static/img/menu.png" alt="menuImage">
-      <div class="timer" id="menutimer" style="position:absolute; top:470px; left:7%; width:430px;">00:00:000</div>
-    </div>
+      <div id="menu" class="mogumogu">
+        <img id="menuimg" src="static/img/menu.png" alt="menuImage" width="1000px">
+        <p class="timer" id="menutimer">00:00:000</p>
+      </div>
 
     <script type="text/javascript" src="static/menuSource.js"></script>
   </body>
