リンクをコメント化

--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -17,11 +17,11 @@
 
     <div class="sp"></div>
 
-    <div id="setumei">
+    <!-- <div id="setumei">
       <div class="image">
         <a  href="https://cdlab-sit.github.io/BBDC/templates/description.html" target="_blank"><img src="../static/img/descri-btn.png" width=600 alt="description-img" id="desimg"></a>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
