--- a/templates/user-waiting.html
+++ b/templates/user-waiting.html
@@ -4,22 +4,22 @@
   <meta charset="utf-8">
   <title>穴掘れ!モグちゃん!!</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-  <link rel="stylesheet" href="../static/user-waiting.css?update=152">
+  <link rel="stylesheet" href="static/user-waiting.css?update=152">
 </head>
 <body>
   <div class="menu">
     <div class="sp"></div>
 
     <div class="image">
-      <img src="../static/img/logo.png" width=500 alt="logo"><br>
-      <a href="/user" class="btn"><img src="../static/img/dig-start.png" width=800 alt="dig-start" id="digimg"></a>
+      <img src="static/img/logo.png" width=500 alt="logo"><br>
+      <a href="./user" class="btn"><img src="static/img/dig-start.png" width=800 alt="dig-start" id="digimg"></a>
     </div>
 
     <div class="sp"></div>
 
     <div id="setumei">
       <div class="image">
-        <a  href="https://cdlab-sit.github.io/BBDC/templates/description.html" target="_blank"><img src="../static/img/descri-btn.png" width=600 alt="description-img" id="desimg"></a>
+        <a  href="https://cdlab-sit.github.io/BBDC/templates/description.html" target="_blank"><img src="static/img/descri-btn.png" width=600 alt="description-img" id="desimg"></a>
       </div>
     </div>
 
