--- a/templates/user.html
+++ b/templates/user.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>穴掘りの時間だ!!</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-  <link rel="stylesheet" href="../static/user.css?update=152">
+  <link rel="stylesheet" href="static/user.css?update=152">
 </head>
 <body>
   <div id="loading">
-    <img src="../static/img/moguchan-udekumi.png" width=700 alt="loading" id="img">
+    <img src="static/img/moguchan-udekumi.png" width=700 alt="loading" id="img">
     <p id="text" class="contents" >穴掘り中モグ...</p>
     <p id="num" class="contents" >0</p>
     <p class="contents" >を素数解析!</p>
@@ -17,6 +17,6 @@
 
 
 
-  <script type="text/javascript" src="../static/user.js?update=152"></script>
+  <script type="text/javascript" src="static/user.js?update=152"></script>
 </body>
 </html>
