--- a/static/styles.css
+++ b/static/styles.css
@@ -1,14 +1,20 @@
 @charset "UTF-8";
 
+
 .mogumogu{
+  width: 1000px;
+  margin: 0 auto;
   cursor: pointer;
-  text-align: center;
+  position: relative;
 }
 
 #menutimer{
   color: #272727;
   font-size: 50px;
   font-weight: 900;
+  position: absolute;
+  top: 450px;
+  left: 50px;
 }
 
 #digtimer{
@@ -22,4 +28,8 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
+}
+
+body{
+  margin: 0px;
 }
