--- a/templates/moguchan.html
+++ b/templates/moguchan.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="static/styles.css">
   </head>
   <body>
-    <div id="mogumogu" class="mogumogu">
+    <div id="mogumogu" class="mogumogu" style="margin: 0;float: left;">
       <div class="line">
         <img id="l1c1" src="static/img/sutegoro-250-250-30.gif" alt="l1c1">
         <img id="l1c2" src="static/img/ground-before-250-250.gif" alt="l1c2">
@@ -25,11 +25,20 @@
         <img id="l3c3" src="static/img/ground-before-250-250.gif" alt="l3c3">
         <img id="l3c4" src="static/img/treasure-250-250-30.gif" alt="l3c4">
       </div>
-
-      <div id="clear" style="position:absolute; top:130px; left:10%; width:430px;"></div>
-      <div class="timer" id="digtimer" style="position:absolute; top:370px; left:31%; width:430px;"></div>
+     
+      <div style="display:none;">
+        <img id="l1c1" src="static/img/pickel-250-250-30.gif" alt="l1c1">
+        <img id="l1c1" src="static/img/drill-250-250-30.gif" alt="l1c1">
+        <img id="l1c1" src="static/img/parking-250-250-30.gif" alt="l1c1">
+        <img id="l1c1" src="static/img/yattane-250-250-30.gif" alt="l1c1"> 
+      </div>
+      <div id="clear" style="position:absolute; top:130px; left:0px; width:430px;"></div>
+      <div class="timer" id="digtimer" style="position:absolute; top:370px; left:250px; width:430px;"></div>
     </div>
-
+    <div style="overflow: hidden; width: auto; padding: 0 0 0 20px">
+      <div style="text-align: center; font-size: 30px;"> --- 解析結果 --- </div>
+      <div id="logs"></div>
+    </div>
     <script type="text/javascript" src="static/source.js"></script>
   </body>
 </html>
