--- a/templates/description.html
+++ b/templates/description.html
@@ -5,6 +5,7 @@
   <title>モグちゃんの説明ページ</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
   <link rel="stylesheet" href="../static/user-waiting.css?update=152">
+  <link rel="shortcut icon" type="image/x-icon" href="../static/img/moguchan-face.ico">
 </head>
 <body>
   <div id="menu">
